smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/doc-targets/docs-on-eof.smithy
// Parse error at line 2, column 1 near `/// Invalid!`: Found a documentation comment that doesn't document anything
/// Invalid!
